# Oryntra

./: .env.example  .env.production.example  .env.stack.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.bench.yml  docker-compose.loadtest.yml  docker-compose.prod.yml  docker-compose.yml  docker-stack.yml  opencode.json  skills-lock.json
agent-python/: .dockerignore  README.md  mypy.ini  pyproject.toml  ruff.toml
agent-python/src/oryntra_agent/: __init__.py  auth.py  main.py  manage.py  runtime_callback.py  settings.py
agent-python/src/oryntra_agent/agent/: media.py  net.py  streaming.py  supervisor.py  tool_runtime.py  tools.py
agent-python/src/oryntra_agent/api/: chatwoot_messages.py  health.py  memory_extraction.py  (+3 more)
agent-python/tests/: conftest.py  test_auth.py  test_chatwoot_dispatch.py  test_chatwoot_messages.py  test_contact_memory_injection.py  test_contact_memory_tool.py  test_external_tools.py  test_fallback_specialist.py  test_google_calendar_tools.py  test_health.py  test_human_handoff_tool.py  test_llm_base_url.py  test_manage.py  test_mcp_tools.py  test_media_classification.py  test_media_preprocess_paths.py  test_media_url_rewrite.py  test_memory_extraction.py  test_net_safe_get.py  test_playground_stream.py  test_product_tool.py  test_prompt_context.py  test_rag.py  test_search_knowledge_base.py  test_single_mode.py  test_supervisor_runtime.py  test_tool_runtime.py
agent-python/tests/fixtures/: sample_knowledge_base.md
(+659 files in other folders)
