[project]
name = "oryntra-agent"
version = "0.1.0"
description = "Oryntra Python agent service — FastAPI + LangGraph runtime"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Anderson Lemes", email = "andersonlemes50@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "markdown-it-py>=3.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oryntra_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--cov=src", "--cov-report=term-missing"]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
